# biped_bike_robot

./: CMakeLists.txt  README.md  package.xml
config/: rviz_config.rviz
launch/: display.launch.py  gazebo.launch.py
meshes/: base_link.STL  elbow_wheel.STL  l_foot_link.STL  l_hip_roll_joint.STL  r_hip_pitch_link.STL  waist_yaw_link.STL
scripts/: patch_urdf.py
solidworks_export/: README.md
solidworks_export/meshes/: arm_link_1.STL  arm_link_2.STL  end_effector.STL  l_ankle_joint.STL  l_hip_pitch_joint.STL  l_knee_joint.STL  l_knee_wheel.STL  r_ankle_joint.STL  r_foot_link.STL  r_hip_roll_joint.STL  r_knee_joint.STL  r_knee_wheel.STL
solidworks_export/urdf/: biped_bike_robot_ver2.urdf
urdf/: biped_bike_robot.urdf
