<?xml version="1.0"?>
<package format="3">
  <name>biped_bike_robot</name>
  <version>1.0.0</version>
  <description>
    Biped Bike Robot 메인 패키지.
    SolidWorks 원본은 solidworks_export/에 보관,
    패치된 URDF는 urdf/에 자동 생성.
  </description>
  <author email="dongwoo@example.com">Seo Dong-woo</author>
  <maintainer email="dongwoo@example.com">Seo Dong-woo</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
